update 文字识别使用普通版，每日50000次调用